[package]
name = "thrift-pool"
version = "0.1.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/midnightexigent/thrift-pool-rs"
description = "Easily turn any thrift client into a connection pool with r2d2 or bb8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.52", optional = true }
bb8 = { version = "0.7.1", optional = true }
r2d2 = { version = "0.8.9", optional = true }
thrift = "0.15.0"

[features]
default = ["enable-r2d2"]
enable-r2d2 = ["r2d2"]
enable-bb8 = ["bb8", "async-trait"]

