[package]
name = "thrift-pool"
version = "1.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/midnightexigent/thrift-pool-rs"
description = "Easily make Connection Pools compatible with r2d2 and bb8 from any Thrift Client"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.52", optional = true }
bb8 = { version = "0.7.1", optional = true }
r2d2 = { version = "0.8.9", optional = true }
thrift = "0.15.0"

[features]
default = ["impl-r2d2"]
impl-r2d2 = ["r2d2"]
impl-bb8 = ["bb8", "async-trait"]

[dev-dependencies]
tokio = { version = "1.15.0", features = ["full"] }
