[package]
name = "thrift-pool"
version = "1.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/midnightexigent/thrift-pool-rs"
description = "Easily make Connection Pools compatible with r2d2 and bb8 from any Thrift Client"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8 = { version = "0.9.0", optional = true }
r2d2 = { version = "0.8.10", optional = true }
thrift = "0.17.0"

[features]
default = ["impl-r2d2", "impl-bb8"]
impl-r2d2 = ["r2d2"]
impl-bb8 = ["bb8"]

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }
